FlightPath 5.x Changelog
========================

2017-01-26
  Fixed bug where duplicating an entire year of courses was skipping over the max hours, if they were
  set to zero.
  

2017-01-19
  Fixed bug in duplicate degrees, where some of the new fields were not being included.
  

2017-01-18
  Fixed bug where advised identical courses in same semester, but in different degrees, FlightPath got confused about which
  course to check.
  
  Fixed bug where after clearing advising cache, an adviser showed invalid tabs.
  
  Fixed bug with variable hour courses not being selected after changing hour selector.
   
 
2017-01-14
  Made more changes, to ensure that users cannot access another student's data by manipulating
  URL variables. 
 
 
2017-01-04
  Handful of extra changes to logout function, again, for Safari browser bug. 
  
  Added more HTML comments to the course_search_display_courses render api call, to give
  more spots for custom modules to dig in and change/add content.
  

2017-01-03
  Added additional unsetting of SESSION vars when cache is cleared, to erase any potential problems.
  
  Working on logout function, to address issue from Safari browser where SESSION is not being
  destroyed correctly.
  

2017-01-02
  Altered the way the renderapi handles markup, so it always gets a CSS class we can
  use later.  Also, added weights to the AdvisingScreen's display_popup_course_descroption.
  
  Made minor CSS tweaks in other places too.
  
  Minor display bug in user module, list of majors for student
  

2016-12-28
  Minor changes to System to suppress PHP warnings in one area.


2016-12-22
  Fixed a bug with substitutions, where the required courses was the same in two different
  degrees, and the substituted courses was ALSO the same.  FlightPath was applying the sub
  to the first instance of the course requirement, and not necessarily the one the user selected.
  