@@ -1,6 +1,11 @@
 FlightPath 5.x Changelog
 ========================
 
+2017-02-07
+  Fixed advising session bug where advisors working at the same time on the same student might see
+  each other's draft work.
+  
+
 2017-01-26
   Fixed bug where duplicating an entire year of courses was skipping over the max hours, if they were
   set to zero.
